--- a/client/src/app/modules/scroll-top/components/scroll-top/scroll-top.component.css
+++ b/client/src/app/modules/scroll-top/components/scroll-top/scroll-top.component.css
@@ -7,7 +7,6 @@
   background-color: #090909;
   border-radius: 50px;
   border: none;
-  float: right;
 }
 #scroll_top_btn:hover {
   background-color: #1e1e1e;
